--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,21 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "docs",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
